# wallet-health-score

./: .env  .env.example  .gitignore  .vercelignore  AGENTS.md  DEPLOYMENT_ARCHITECTURE.md  DEPLOYMENT_CHECKLIST.md  E2E_TESTING.md  PROJECT_OVERVIEW.md  README.md  START_HERE.md  VERCEL_DEPLOYMENT.md  VERCEL_QUICK_START.md  Wallet_Score_Health_API_PRD.md  cursor.md  package.json  turbo.json  vercel.json
.cursor/plans/: phase-0-foundations-setup-1e167831.plan.md
.github/workflows/: ci.yml
api/: README.md  requirements.txt
api/app/: main.py
api/tests/: conftest.py  test_address_validation.py  test_weekly_activity.py
apps/api/: Dockerfile  README.md  pyproject.toml
apps/api/app/: main.py
apps/etl/: README.md  pyproject.toml
apps/etl/dags/: example_init.py
apps/web/: README.md  next.config.mjs  package.json  tailwind.config.ts  tsconfig.json
apps/web/app/: layout.tsx  page.tsx
etl/: README.md  requirements.txt
etl/dags/: wallet_score_daily.py
etl/scripts/: seed_wallets.py
etl/sql/: 001_init_schema.sql  002_extraction_jobs.sql  README.md
etl/src/wallet_etl/: config.py
etl/tests/: conftest.py  test_stablecoin_ratio.py  test_timestamp_bounds.py
infra/: README.md  SECRETS.md  docker-compose.yml
infra/docker/: docker-compose.yml
web/: DEPLOYMENT.md  Dockerfile  README.md  next.config.ts  package-lock.json  package.json  vercel-check.sh
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/components/: activity-trend-chart.tsx  comparison-table.tsx  component-bars.tsx  component-radar.tsx  history-chart.tsx  loading-states.tsx  (+3 more)
(+9 files in other folders)
