[tool.poetry]
name = "api"
version = "0.1.0"
description = "Wallet Health API"
authors = ["Wallet Health <dev@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.114.0"
uvicorn = {extras = ["standard"], version = "^0.30.6"}
pydantic = "^2.9.0"
pydantic-settings = "^2.5.2"
SQLAlchemy = "^2.0.35"
psycopg2-binary = "^2.9.9"
redis = "^5.0.8"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.8"
black = "^24.8.0"
mypy = "^1.11.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


